--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <!-- nav - start -->
+  <!-- Navbar - start -->
   <div class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -44,10 +44,10 @@
       </nav>
     </div>
   </div>
-  <!-- nav - end-->
+  <!-- Navbar - end-->
 
 
-  <!-- Masthead -->
+  <!-- Masthead - start -->
   <header class="masthead">
     <div class="container">
       <div class="masthead-header-font"><small>27 Digital Agency</small></div>
@@ -58,9 +58,11 @@
       </a>
     </div>
   </header>
+  <!-- Masthead - end -->
 
 
-  <!-- blog - start -->
+
+  <!-- Blog - start -->
   <div class="blog-background">
     <div class="container">
       <div class="row">
@@ -72,9 +74,10 @@
       </div>
     </div>
   </div>
-  <!-- blog - end -->
+  <!-- Blog - end -->
 
-  <!-- inner wrap - start -->
+
+  <!-- InnerWrap - start -->
   <div class="background-border py-5">
     <div class="container">
       <div class="row">
@@ -90,9 +93,9 @@
       </div>
     </div>
   </div>
-  <!-- inner wrap - end -->
+  <!-- InnerWrap - end -->
 
-    <!-- boxes - start -->
+    <!-- Boxes - start -->
     <div class="background-border border-bottom border-top ">
       <div class="container mb-5">
         <div class="row">
@@ -114,10 +117,10 @@
         </div>
       </div>
     </div>
-    <!-- boxes - end -->
+    <!-- Boxes - end -->
 
 
-  <!-- cards - start -->
+  <!-- Cards - start -->
   <div>
     <div class="media mt-5 ml-4 mb-5">
       <img src="assets/cards/1.jpg%20" class="rounded-left rounded-right mr-4 " alt="...">
@@ -136,9 +139,9 @@
       </div>
     </div>
   </div>
-  <!-- cards - end -->
+  <!-- Cards - end -->
 
-  <!-- footer - start -->
+  <!-- Footer - start -->
   <div class="footer-background footer-text border-top">
     <div class="footer">
       <div class="container">
@@ -178,7 +181,7 @@
       </div>
     </div>
   </div>
-  <!-- footer - end -->
+  <!-- Footer - end -->
 
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
