--- a/index.html
+++ b/index.html
@@ -13,57 +13,40 @@
 <body>
 
   <!-- Navbar - start -->
-  <div class="fixed-top">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
-          <img src="assets/masthead/27dıgıtal.png" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link mt-2" href="">Ana Sayfa<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link ml-2 mt-2" href="">Hakkımızda</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link ml-2 mt-2" href="#">Hizmetlerimiz</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link ml-2 mt-2" href="#">İletişim</a>
-            </li>
-            <li class="nav-item ml-3 mt-2">
-              <a class="nav-link btn btn-outline-dark text-dark shadow" href="#">Tanışalım</a>
-            </li>
-          </ul>
-        </div>
+    <header class="container fixed-top">
+      <nav class="navbar">
+        <img src="assets/masthead/27dıgıtal.png" alt="">
+
+        <a class="nav-link" href="">Ana Sayfa</a>
+
+        <a class="nav-link" href="#">Hakkımızda</a>
+
+        <a class="nav-link" href="#">Hizmetlerimiz</a>
+
+        <a class="nav-link" href="#">İletişim</a>
+
+        <!-- <a class="btn button" href="">Tanışalım</a> -->
       </nav>
-    </div>
-  </div>
+    </header>
   <!-- Navbar - end-->
 
 
   <!-- Masthead - start -->
-  <header class="masthead">
+  <nav class="masthead">
     <div class="container">
       <div class="masthead-header-font"><small>27 Digital Agency</small></div>
       <div class="masthead-font">Marketing & <br> social media!</div>
-      <a class="btn btn-outline-dark text-dark mt-2 mb-5 shadow" href="">
+      <a class="btn mt-1 mb-5 shadow button" href="">
         Tanışalım!
         <br>
       </a>
     </div>
-  </header>
+  </nav>
   <!-- Masthead - end -->
 
 
-
   <!-- Blog - start -->
-  <div class="blog-background">
+  <div class="border-top border-bottom">
     <div class="container">
       <div class="row">
         <div class="col-12 mt-4 mb-5">
@@ -82,13 +65,13 @@
     <div class="container">
       <div class="row">
         <div class="col-4 border-right">
-          <h4><strong><small>200 + <br> Proje</small></strong></h4>
+          <h4><small>200 + <br> Proje</small></h4>
         </div>
         <div class="col-4 border-right">
-          <h4><strong><small>199 + <br> Referans</small></strong></h4>
+          <h4><small>199 + <br> Referans</small></h4>
         </div>
         <div class="col-4">
-          <h4><strong><small>35 + <br> Çalışan</small></strong></h4>
+          <h4><small>99 + <br> Çalışan</small></h4>
         </div>
       </div>
     </div>
@@ -96,27 +79,25 @@
   <!-- InnerWrap - end -->
 
     <!-- Boxes - start -->
-    <div class="background-border border-bottom border-top ">
-      <div class="container mb-5">
-        <div class="row">
-          <div class="col-4 mt-5">
+      <section class="container py-5">
+        <div class="row mt-5 mb-4">
+          <article class="col-4">
             <img class="w-100 rounded-pill" src="assets/boxes/1.jpg%20" alt="">
-            <h4 class="mt-3 boxes-header-font">Threads</h4>
+            <h4 class="boxes-header-font mt-3">Threads</h4>
             <h6 class="boxes-font">Illustration</h6>
-          </div>
-          <div class="col-4 mt-5">
+          </article>
+          <article class="col-4">
             <img class="w-100 rounded-pill" src="assets/boxes/2.jpg" alt="">
-            <h4 class="mt-3 boxes-header-font">Southwest</h4>
+            <h4 class="boxes-header-font mt-3">Southwest</h4>
             <h6 class="boxes-font">Website Design</h6>
-          </div>
-          <div class="col-4 mt-5">
+          </article>
+          <article class="col-4">
             <img class="w-100 rounded-pill" src="assets/boxes/3.jpg" alt="">
-            <h4 class="mt-3 boxes-header-font">Window</h4>
+            <h4 class=" boxes-header-font mt-3">Window</h4>
             <h6 class="boxes-font">Photography</h6>
-          </div>
+          </article>
         </div>
-      </div>
-    </div>
+      </section>
     <!-- Boxes - end -->
 
 
@@ -184,8 +165,19 @@
   <!-- Footer - end -->
 
 
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
+<script>
+  document.addEventListener('scroll', () => {
+    const header = document.querySelector('header');
+
+    if (window.scrollY > 0) {
+      header.classList.add('scrolled');
+    } else {
+      header.classList.remove('scrolled');
+    }
+  });
+</script>
 </html>
